Changed the Sukar font.

--- a/collection.html
+++ b/collection.html
@@ -7,14 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
+    <link href="https://fonts.cdnfonts.com/css/sukar" rel="stylesheet">
     <title>collection</title>
 
     <style>
-        @font-face {
-            font-family: 'sukar';
-            src: url("fonts/Sukar Regular.ttf"), format(truetype);
-        }
         @font-face {
             font-family: 'lovelo light';
             src: url("fonts/Lovelo Line Light.otf"), format(opentype);
@@ -27,7 +23,7 @@
             font-size: 8pt;
             font-size: 1.48em;
             font-weight: normal;
-            font-family: 'sukar', sans-serif;
+            font-family: 'Sukar', sans-serif;
             margin: 0;
             white-space: nowrap;
             color: #1a132f;
@@ -96,12 +92,12 @@
             margin-top: 500px;
         }
         .reminder_text .title{
-            margin-bottom: 37px;
+            /* margin-bottom: 27px; */
             font-size: 22.2pt;
             font-weight: bold;
         }
-        .reminder_text .first_p{
-            margin-bottom: 29.6px;
+        .reminder_text .text{
+            font-size: 80% !important;
         }
 
         /****************************TABLE*************************/
@@ -144,8 +140,9 @@
         }
          /************************TABLE TEXT************************/
          .text_table{
-            margin-top: 96.2px;
+            margin-top: 66.2px;
             white-space: normal;
+            font-size: 80% !important;
         }
         .text_table .first-p,
         .text_table .second-p,
@@ -164,7 +161,7 @@
             top: 2550px;
             z-index: 100;
             padding-left: 170.2px;
-            font-size: 70% !important;
+            font-size: 90% !important;
             line-height: 40px;
             padding-bottom: 100px;
         }
@@ -184,8 +181,12 @@
             position: absolute;
             top: 50px;
         }
+        .terms{
+            font-weight: bold;
+        }
         .bank_transfer, .terms{
-            margin-top: 20px
+            margin-top: 20px;
+            
         }
         .iban .title, .bank_transfer .title{
             margin-bottom: 20px;
