--- a/invoice.html
+++ b/invoice.html
@@ -7,14 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
+    <link href="https://fonts.cdnfonts.com/css/sukar" rel="stylesheet">
     <title>invoice</title>
 
     <style>
-        @font-face {
-            font-family: 'sukar';
-            src: url("fonts/Sukar Regular.ttf"), format(truetype);
-        }
         @font-face {
             font-family: 'lovelo light';
             src: url("fonts/Lovelo Line Light.otf"), format(opentype);
@@ -27,7 +23,7 @@
             font-size: 8pt;
             font-size: 1.48em;
             font-weight: normal;
-            font-family: 'sukar', sans-serif;
+            font-family: 'Sukar', sans-serif;
             margin: 0;
             white-space: nowrap;
             color: #1a132f;
@@ -261,6 +257,9 @@
             padding-left: 60px;
             position: absolute;
             top: 50px;
+        }
+        .terms{
+            font-weight: bold;
         }
         .bank_transfer, .terms{
             margin-top: 80px
